--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,12 @@
 	--clr-high: hsl(90, 100%, 50%);
 	--clr-med: hsl(200, 100%, 50%);
 	--clr-low: hsl(250, 100%, 70%);
-	--clr-text: hsl(0, 0%, 11.8%);
+	--clr-text: #1e1e1e;
 	--clr-grey: hsl(0, 0%, 30.9%);
-	--clr-bkgd-light: hsl(0, 0%, 98%);
-	--clr-bkgd-dark: hsl(0, 50%, 96%);
+	--clr-bkgd-light: #fafafa;
+	--clr-bkgd-dark: hsl(274, 50%, 96%);
+	--clr-violet: hsl(274, 74%, 39%);
+	--clr-violet-light: hsl(274, 100%, 62%);
 	--clr-width: 828px;
 }
 
@@ -48,7 +50,6 @@ h4 {
 }
 
 #root {
-	outline: 1px solid hotpink;
 	width: var(--clr-width);
 	height: 100vh;
 	display: grid;
@@ -62,43 +63,37 @@ h4 {
 /* header */
 .header {
 	grid-area: header;
-	outline: 1px solid lawngreen;
 	place-content: center;
 	display: grid;
-	background-color: var(--clr-bkgd-light);
+	background-color: var(--clr-violet);
+	color: var(--clr-bkgd-light);
 }
 .header-title {
-	outline: 1px solid darkcyan;
 }
 
 /* sidebar */
 .sidebar {
 	grid-area: sidebar;
 	background-color: var(--clr-bkgd-light);
-	outline: 1px solid saddlebrown;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
 }
 .sidebar-tab {
-	outline: 1px solid violet;
 	width: calc(var(--clr-width) * 0.382);
 	display: grid;
 	grid-template-columns: 38.2% 61.8%;
 }
 .sidebar-tab .icon {
-	outline: 1px solid cadetblue;
 	align-self: center;
 	justify-self: flex-end;
 	margin-right: 1rem;
 }
 .sidebar-tab .tab-text {
-	outline: 1px solid salmon;
 }
 
 .container-projects {
-	outline: 1px solid forestgreen;
 	display: flex;
 	flex-direction: column;
 	width: calc(var(--clr-width) * 0.382);
@@ -109,32 +104,28 @@ h4 {
 	align-items: center;
 }
 .sidebar-project {
-	outline: 1px solid darkcyan;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 .project-text {
-	outline: 1px solid red;
 	text-align: center;
 	margin-left: 1rem;
 }
 .sidebar-project .icon-plus {
-	outline: 1px solid green;
 	margin-left: auto;
 	margin-right: 1rem;
 }
 /* content */
 .content {
 	grid-area: content;
-	outline: 1px solid blueviolet;
 }
 
+/* project modal */
 .addProject-container {
 	display: grid;
 	grid-template-rows: 38.2% 61.8%;
-	outline: 1px solid green;
-	color: var(--clr-text);
+
 	visibility: hidden;
 	position: absolute;
 	width: 511px;
@@ -149,20 +140,20 @@ h4 {
 	justify-self: center;
 	align-self: center;
 	display: grid;
-	outline: 1px solid goldenrod;
-	background-color: var(--clr-bkgd-dark);
+	background-color: var(--clr-violet);
+	color: var(--clr-bkgd-light);
 }
 .text-addProject {
 	align-self: center;
 	margin-left: 1rem;
 }
 .form-addProject {
-	outline: 1px solid hotpink;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: space-evenly;
-	margin-left: 1rem;
+	padding-left: 1rem;
+	background-color: var(--clr-bkgd-light);
 }
 .form-addProject label {
 	font-size: 2rem;
@@ -172,7 +163,6 @@ h4 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	outline: 1px solid red;
 }
 
 .addProject-name {
@@ -180,14 +170,14 @@ h4 {
 	width: 41rem;
 	height: 5rem;
 	outline: none;
-	border: none;
-	background-color: var(--clr-bkgd-dark);
-	border-radius: 1rem;
+	border: 1px solid var(--clr-grey);
+	border-radius: 3px;
 	padding-left: 1rem;
+	font-size: 2rem;
 }
 .addProject-name:hover,
 .addProject-name:active {
-	border: 1px solid var(--clr-grey);
+	border: 1px solid var(--clr-violet);
 }
 .form-addProject input[type='color'] {
 	margin-left: 1.3rem;
@@ -198,7 +188,6 @@ h4 {
 	align-self: flex-end;
 	margin-right: 1rem;
 	display: flex;
-	outline: 1px solid red;
 	width: 12rem;
 	height: 4rem;
 	justify-content: space-between;
@@ -210,22 +199,188 @@ h4 {
 	align-items: center;
 	width: 4rem;
 	border-radius: 1rem;
+	outline: none;
+	border: none;
+}
+.bttn-cancelProject {
+	background-color: var(--clr-bkgd-light);
+}
+.icon-cancelProject {
+	clip-path: margin-box;
+	border-radius: 3px;
+}
+.bttn-addProject {
+	background-color: var(--clr-violet);
 }
 .bttn-addProject:hover,
 .bttn-cancelProject:hover {
 	cursor: pointer;
 }
 
-/*  */
-
+/* todo modal */
 .todo-container {
 	visibility: hidden;
 	position: absolute;
-	background-color: mediumorchid;
-	width: 400px;
-	height: 400px;
+	background-color: var(--clr-bkgd-light);
+	width: 511px;
+	height: 826px;
+	top: calc(50% - (826px / 2));
+	left: calc(50% - (511px / 2));
+	border-radius: 1rem;
+}
+.form-addTodo {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: flex-start;
+	height: 100%;
+	width: 100%;
+}
+.text-addTodo {
+	width: 100%;
+	height: 14.6%;
+	padding-left: 1rem;
+	margin-top: 0px;
+	display: grid;
+	padding-top: 4.2rem;
+	background-color: var(--clr-violet);
+	color: var(--clr-bkgd-light);
+	border-radius: 1rem 1rem 0px 0px;
 }
 
-.addTodoIcons-container {
-	outline: 1px solid green;
+.addTodo-name-container {
+	width: 100%;
+	height: 5rem;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	padding-left: 1rem;
+}
+.label-name {
+	font-size: 2rem;
+	width: 14rem;
+}
+.addTodo-name {
+	height: 5rem;
+	width: 35rem;
+	font-size: 2rem;
+	outline: none;
+	border: 1px solid var(--clr-grey);
+	border-radius: 3px;
+	padding-left: 1rem;
+	font-family: inherit;
+}
+.addTodo-name:hover,
+.addTodo-name:active {
+	border: 1px solid var(--clr-violet-light);
+}
+
+.addTodo-desc-container {
+	width: 100%;
+	display: flex;
+}
+.label-description {
+	font-size: 2rem;
+	margin-top: 1rem;
+	width: 14rem;
+	padding-left: 1rem;
+	margin-right: 1rem;
+}
+.addTodo-description {
+	padding-left: 1rem;
+	width: 35rem;
+	height: 30rem;
+	resize: none;
+	font-size: 2rem;
+	font-family: inherit;
+	color: var(--clr-text);
+	border-radius: 3px;
+	outline: none;
+}
+.addTodo-description:hover,
+.addTodo-description:active {
+	border: 1px solid var(--clr-violet-light);
+}
+
+.addTodo-date-container {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+}
+.label-dueDate {
+	font-size: 2rem;
+	width: 14rem;
+	padding-left: 1rem;
+	margin-right: 0.5rem;
+}
+.addTodo-dueDate {
+	margin-left: 0.5rem;
+	width: 23rem;
+	height: 5rem;
+	font-size: 2rem;
+	color: var(--clr-text);
+	padding-left: 1rem;
+	font-family: inherit;
+	border: 1px solid var(--clr-grey);
+	outline: none;
+	border-radius: 3px;
+}
+.addTodo-dueDate:hover,
+.addTodo-dueDate:active {
+	border: 1px solid var(--clr-violet-light);
+}
+
+.addTodo-priority-container {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+}
+.label-selectPriority {
+	width: 14rem;
+	font-size: 2rem;
+	padding-left: 1rem;
+	margin-right: 1rem;
+}
+.addTodo-selectPriority {
+	height: 5rem;
+	width: 31rem;
+	font-size: 2rem;
+	border-radius: 3px;
+	outline: none;
+	border: 1px solid var(--clr-grey);
+	background-color: white;
+	font-family: inherit;
+	border: 1px solid var(--clr-grey);
+}
+.addTodo-selectPriority:hover,
+.addTodo-selectPriority:hover,
+.addTodo-selectPriority::selection {
+	border: 1px solid var(--clr-violet-light);
+}
+
+.addTodo-icons-container {
+	width: 13rem;
+	align-self: flex-end;
+	margin-right: 1rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 1rem;
+}
+.bttn-cancelTodo {
+	background-color: var(--clr-bkgd-light);
+	outline: none;
+	border: none;
+}
+.bttn-addTodo {
+	border: none;
+	outline: none;
+	background-color: var(--clr-violet);
+	border-radius: 3px;
+}
+.bttn-cancelTodo:hover,
+.bttn-addTodo:hover {
+	cursor: pointer;
 }
