--- a/src/index.css
+++ b/src/index.css
@@ -123,9 +123,10 @@ h4 {
 
 /* project modal */
 .addProject-container {
-	display: grid;
-	grid-template-rows: 38.2% 61.8%;
-
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
 	visibility: hidden;
 	position: absolute;
 	width: 511px;
@@ -133,19 +134,21 @@ h4 {
 	top: calc(38% - (316px / 2));
 	left: calc(62% - (511px / 2));
 	border-radius: 1rem;
+	outline: 1px solid green;
 }
 .addProjectHeading-container {
-	width: 100%;
-	height: 100%;
+	width: 511px;
+	height: 38%;
 	justify-self: center;
 	align-self: center;
 	display: grid;
 	background-color: var(--clr-violet);
 	color: var(--clr-bkgd-light);
+	border-radius: 1rem 1rem 0px 0px;
 }
 .text-addProject {
 	align-self: center;
-	margin-left: 1rem;
+	padding-left: 1rem;
 }
 .form-addProject {
 	display: flex;
@@ -154,20 +157,24 @@ h4 {
 	justify-content: space-evenly;
 	padding-left: 1rem;
 	background-color: var(--clr-bkgd-light);
+	outline: 1px solid red;
+	width: 100%;
+	height: 62%;
 }
-.form-addProject label {
-	font-size: 2rem;
-}
+
 .addProject-name-container,
 .addProject-colour-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-
+.label-name {
+	font-size: 2rem;
+	width: 15rem;
+}
 .addProject-name {
-	margin-left: 2rem;
-	width: 41rem;
+	margin-right: 1rem;
+	width: 35rem;
 	height: 5rem;
 	outline: none;
 	border: 1px solid var(--clr-grey);
@@ -176,14 +183,27 @@ h4 {
 	font-size: 2rem;
 }
 .addProject-name:hover,
+.addProject-name:focus,
 .addProject-name:active {
-	border: 1px solid var(--clr-violet);
+	border: 1px solid var(--clr-violet-light);
 }
-.form-addProject input[type='color'] {
+
+.label-colour {
+	width: 12.7rem;
+	font-size: 2rem;
+}
+.addProject-colour {
 	margin-left: 1.3rem;
 	width: 10rem;
 	height: 4rem;
+	border-radius: 3px;
 }
+.addProject-colour:hover,
+.addProject-colour:focus,
+.addProject-colour:active {
+	border: 1px solid var(--clr-violet-light);
+}
+
 .addProjectIcons-container {
 	align-self: flex-end;
 	margin-right: 1rem;
@@ -271,7 +291,8 @@ h4 {
 	font-family: inherit;
 }
 .addTodo-name:hover,
-.addTodo-name:active {
+.addTodo-name:active,
+.addTodo-name:focus {
 	border: 1px solid var(--clr-violet-light);
 }
 
@@ -298,6 +319,7 @@ h4 {
 	outline: none;
 }
 .addTodo-description:hover,
+.addTodo-description:focus,
 .addTodo-description:active {
 	border: 1px solid var(--clr-violet-light);
 }
@@ -327,6 +349,7 @@ h4 {
 	border-radius: 3px;
 }
 .addTodo-dueDate:hover,
+.addTodo-dueDate:focus,
 .addTodo-dueDate:active {
 	border: 1px solid var(--clr-violet-light);
 }
@@ -355,7 +378,7 @@ h4 {
 	border: 1px solid var(--clr-grey);
 }
 .addTodo-selectPriority:hover,
-.addTodo-selectPriority:hover,
+.addTodo-selectPriority:focus,
 .addTodo-selectPriority::selection {
 	border: 1px solid var(--clr-violet-light);
 }
