--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,14 @@
 	--clr-urgent: hsl(0, 100%, 65%);
 	--clr-high: hsl(90, 100%, 50%);
 	--clr-med: hsl(200, 100%, 50%);
-	--clr-low: hsl(250, 100%, 70%);
+	--clr-low: hsl(240, 100%, 70%);
 	--clr-text: #1e1e1e;
-	--clr-grey: hsl(0, 0%, 30.9%);
-	--clr-bkgd-light: #fafafa;
-	--clr-bkgd-dark: hsl(274, 50%, 96%);
+	--clr-bkgd-light: hsl(274, 0%, 98%);
+	--clr-bkgd-med: hsl(274, 15%, 94%);
+	--clr-bkgd-dark: #63526f;
 	--clr-violet: hsl(274, 74%, 39%);
 	--clr-violet-light: hsl(274, 100%, 62%);
-	--clr-width: 828px;
+	--clr-width-app: 828px;
 }
 
 html {
@@ -50,7 +50,7 @@ h4 {
 }
 
 #root {
-	width: var(--clr-width);
+	width: var(--clr-width-app);
 	height: 100vh;
 	display: grid;
 	grid-template-columns: 38.2% 61.8%;
@@ -60,7 +60,9 @@ h4 {
 		'sidebar content';
 }
 
-/* header */
+/** 
+ header 
+*/
 .header {
 	grid-area: header;
 	place-content: center;
@@ -68,10 +70,10 @@ h4 {
 	background-color: var(--clr-violet);
 	color: var(--clr-bkgd-light);
 }
-.header-title {
-}
 
-/* sidebar */
+/**
+ sidebar 
+*/
 .sidebar {
 	grid-area: sidebar;
 	background-color: var(--clr-bkgd-light);
@@ -81,7 +83,7 @@ h4 {
 	align-items: center;
 }
 .sidebar-tab {
-	width: calc(var(--clr-width) * 0.382);
+	width: calc(var(--clr-width-app) * 0.382);
 	display: grid;
 	grid-template-columns: 38.2% 61.8%;
 }
@@ -90,13 +92,16 @@ h4 {
 	justify-self: flex-end;
 	margin-right: 1rem;
 }
-.sidebar-tab .tab-text {
+.projectHeading-wrapper {
+	display: flex;
+	justify-content: space-between;
+	padding: 0px 1rem;
+	background-color: var(--clr-bkgd-med);
 }
-
 .container-projects {
 	display: flex;
 	flex-direction: column;
-	width: calc(var(--clr-width) * 0.382);
+	width: calc(var(--clr-width-app) * 0.382);
 }
 .projectsHeading-container {
 	display: flex;
@@ -116,12 +121,103 @@ h4 {
 	margin-left: auto;
 	margin-right: 1rem;
 }
-/* content */
+
+/**
+ content 
+*/
 .content {
 	grid-area: content;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	outline: 1px solid blue;
+	overflow: auto;
+}
+.form-searchTodo {
+	position: relative;
 }
 
-/* project modal */
+.searchTodo {
+	width: calc(828px * 0.618 - 4rem);
+	height: 5rem;
+	margin: 1rem 0px;
+	outline: none;
+	border: 1px solid var(--clr-bkgd-dark);
+	border-radius: 3px;
+	padding-left: 5rem;
+	font-size: 2rem;
+	font-family: inherit;
+	position: relative;
+}
+.icon-search {
+	position: absolute;
+	top: 2rem;
+	left: 1.5rem;
+}
+
+/**
+ todo contents
+*/
+.todoContent-container {
+	width: calc(828px * 0.618 - 4rem);
+	border-radius: 1rem;
+	display: flex;
+	flex-direction: column;
+	padding: 1rem;
+	font-family: inherit;
+	background-color: var(--clr-bkgd-light);
+	border: 1px solid var(--clr-bkgd-med);
+	box-shadow: 1px 1px 1.6px 1.6px var(--clr-bkgd-light);
+	margin-bottom: 2rem;
+}
+.todoContent-heading-container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 5rem;
+}
+.todoContent-projectName {
+	font-size: 2.5rem;
+}
+.todoContent-checkbox {
+	transform: scale(1.75);
+	margin-right: 1rem;
+}
+.todoContent-checkbox:active,
+.todoContent-checkbox:hover,
+.todoContent-checkbox:focus {
+	outline: 1px solid var(--clr-violet-light);
+}
+.todoContent-name {
+	font-size: 2rem;
+	margin: 0.75rem 0px;
+}
+.todoContent-description {
+	width: calc(828px * 0.618 - 6rem);
+	font-size: 2rem;
+}
+.todoContent-dueDate {
+	margin-left: auto;
+	margin-top: 0px;
+	font-size: 2rem;
+	text-rendering: optimizeLegibility;
+}
+.priority-container {
+	width: 10rem;
+	font-size: 2rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: var(--clr-text);
+	border-radius: 3px;
+	height: 3.8rem;
+	margin-left: auto;
+	margin-top: -1rem;
+}
+/**
+ project modal
+*/
 .addProject-container {
 	display: flex;
 	flex-direction: column;
@@ -134,7 +230,7 @@ h4 {
 	top: calc(38% - (316px / 2));
 	left: calc(62% - (511px / 2));
 	border-radius: 1rem;
-	outline: 1px solid green;
+	border: 1px solid var(--clr-bkgd-dark);
 }
 .addProjectHeading-container {
 	width: 511px;
@@ -157,9 +253,9 @@ h4 {
 	justify-content: space-evenly;
 	padding-left: 1rem;
 	background-color: var(--clr-bkgd-light);
-	outline: 1px solid red;
 	width: 100%;
 	height: 62%;
+	border-radius: 0px 0px 1rem 1rem;
 }
 
 .addProject-name-container,
@@ -177,10 +273,12 @@ h4 {
 	width: 35rem;
 	height: 5rem;
 	outline: none;
-	border: 1px solid var(--clr-grey);
+	border: 1px solid var(--clr-bkgd-dark);
 	border-radius: 3px;
 	padding-left: 1rem;
 	font-size: 2rem;
+	color: var(--clr-text);
+	font-family: inherit;
 }
 .addProject-name:hover,
 .addProject-name:focus,
@@ -247,6 +345,7 @@ h4 {
 	top: calc(50% - (826px / 2));
 	left: calc(50% - (511px / 2));
 	border-radius: 1rem;
+	border: 1px solid var(--clr-bkgd-dark);
 }
 .form-addTodo {
 	display: flex;
@@ -262,7 +361,7 @@ h4 {
 	padding-left: 1rem;
 	margin-top: 0px;
 	display: grid;
-	padding-top: 4.2rem;
+	padding-top: 4.3rem;
 	background-color: var(--clr-violet);
 	color: var(--clr-bkgd-light);
 	border-radius: 1rem 1rem 0px 0px;
@@ -275,6 +374,7 @@ h4 {
 	align-items: center;
 	justify-content: flex-start;
 	padding-left: 1rem;
+	margin-top: -2rem;
 }
 .label-name {
 	font-size: 2rem;
@@ -285,7 +385,7 @@ h4 {
 	width: 35rem;
 	font-size: 2rem;
 	outline: none;
-	border: 1px solid var(--clr-grey);
+	border: 1px solid var(--clr-bkgd-dark);
 	border-radius: 3px;
 	padding-left: 1rem;
 	font-family: inherit;
@@ -342,9 +442,9 @@ h4 {
 	height: 5rem;
 	font-size: 2rem;
 	color: var(--clr-text);
-	padding-left: 1rem;
+	padding: 0px 1rem;
 	font-family: inherit;
-	border: 1px solid var(--clr-grey);
+	border: 1px solid var(--clr-bkgd-dark);
 	outline: none;
 	border-radius: 3px;
 }
@@ -367,15 +467,16 @@ h4 {
 	margin-right: 1rem;
 }
 .addTodo-selectPriority {
+	padding: 0px 0.5rem;
 	height: 5rem;
 	width: 31rem;
 	font-size: 2rem;
 	border-radius: 3px;
 	outline: none;
-	border: 1px solid var(--clr-grey);
+	border: 1px solid var(--clr-bkgd-dark);
 	background-color: white;
 	font-family: inherit;
-	border: 1px solid var(--clr-grey);
+	border: 1px solid var(--clr-bkgd-dark);
 }
 .addTodo-selectPriority:hover,
 .addTodo-selectPriority:focus,
