--- a/src/index.css
+++ b/src/index.css
@@ -210,9 +210,15 @@ h4 {
 	width: calc(828px * 0.618 - 6rem);
 	font-size: 2rem;
 }
+.dateAndPriority-container {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	height: 5rem;
+}
+
 .todoContent-dueDate {
-	margin-left: auto;
-	margin-top: 0px;
+	margin-right: 2rem;
 	font-size: 2rem;
 	text-rendering: optimizeLegibility;
 }
@@ -225,8 +231,6 @@ h4 {
 	color: var(--clr-text);
 	border-radius: 3px;
 	height: 3.8rem;
-	margin-left: auto;
-	margin-top: -1rem;
 }
 /**
  project modal
