--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,11 @@ h4 {
 	flex-direction: column;
 	width: calc(var(--clr-width-app) * 0.382);
 }
+.text-projects {
+	width: 19.5rem;
+	height: 7rem;
+	padding-top: 1rem;
+}
 .projectsHeading-container {
 	display: flex;
 	justify-content: space-evenly;
@@ -121,14 +126,17 @@ h4 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	height: 7rem;
 }
 .sidebar-project:hover {
 	background-color: var(--clr-bkgd-med);
 	cursor: pointer;
 }
 .project-text {
-	text-align: center;
 	margin-left: 1rem;
+	height: 5rem;
+	width: calc(var(--clr-width-app) * 0.382 * 0.618);
+	padding-top: 1rem;
 }
 .sidebar-project .icon-plus {
 	margin-left: auto;
