--- a/src/index.css
+++ b/src/index.css
@@ -285,6 +285,7 @@ h4 {
 	left: calc(62% - (511px / 2));
 	border-radius: 1rem;
 	border: 1px solid var(--clr-bkgd-dark);
+	z-index: 10;
 }
 .addProjectHeading-container {
 	width: 511px;
