--- a/src/index.css
+++ b/src/index.css
@@ -46,9 +46,6 @@ h3 {
 h4 {
 	font-size: 2rem;
 }
-.icon:hover {
-	cursor: pointer;
-}
 
 #root {
 	width: var(--clr-width-app);
@@ -91,14 +88,14 @@ h4 {
 }
 .sidebar-tab {
 	width: calc(var(--clr-width-app) * 0.382);
-	display: grid;
-	grid-template-columns: 38.2% 61.8%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-.sidebar-tab .icon {
-	align-self: center;
-	justify-self: flex-end;
-	margin-right: 1rem;
+.sidebar-tab * {
+	font-size: x-large;
 }
+
 .projectHeading-wrapper {
 	display: flex;
 	justify-content: space-between;
@@ -110,9 +107,7 @@ h4 {
 	background-color: var(--clr-bkgd-med);
 	cursor: pointer;
 }
-.projectHeading-wrapper .icon {
-	transform: scale(1.5);
-}
+
 .container-projects {
 	display: flex;
 	flex-direction: column;
@@ -131,9 +126,27 @@ h4 {
 }
 .sidebar-project {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
 	height: 7rem;
+	padding-right: 1rem;
+}
+.bttn-projectModal {
+	border: none;
+	outline: none;
+	width: 1rem;
+	height: 1rem;
+	background-color: var(--clr-bkgd-light);
+	border-radius: 3px;
+	color: var(--clr-violet);
+	font-size: 6rem;
+	display: grid;
+	place-content: center;
+	margin-right: 1rem;
+}
+.bttn-projectModal:hover {
+	cursor: pointer;
+	background-color: var(--clr-bkgd-med);
 }
 .sidebar-project:hover {
 	background-color: var(--clr-bkgd-med);
@@ -145,9 +158,20 @@ h4 {
 	width: calc(var(--clr-width-app) * 0.382 * 0.618);
 	padding-top: 1rem;
 }
-.sidebar-project .icon-plus {
-	margin-left: auto;
+.bttn-todoModal {
+	border: none;
+	outline: none;
+	width: 1rem;
+	height: 1rem;
+	background-color: var(--clr-bkgd-light);
+	border-radius: 3px;
+	font-size: 4rem;
+	display: grid;
+	place-content: center;
 	margin-right: 1rem;
+}
+.bttn-todoModal:hover {
+	cursor: pointer;
 }
 
 /**
@@ -184,15 +208,10 @@ h4 {
 	outline: none;
 	border: 1px solid var(--clr-bkgd-dark);
 	border-radius: 3px;
-	padding-left: 5rem;
+	padding-left: 3rem;
 	font-size: 2rem;
 	font-family: inherit;
 	position: relative;
-}
-.icon-search {
-	position: absolute;
-	top: 2rem;
-	left: 1.5rem;
 }
 
 .select-filterByPriority,
@@ -206,6 +225,18 @@ h4 {
 	text-align: center;
 	margin-bottom: 1rem;
 	color: var(--clr-text);
+	outline: none;
+}
+.select-filterByPriority:hover,
+.select-filterByPriority:active,
+.select-filterByPriority:focus,
+.select-sortByPriority:hover,
+.select-sortByPriority:active,
+.select-sortByPriority:focus,
+.searchTodo:hover,
+.searchTodo:active,
+.searchTodo:focus {
+	border: 1px solid var(--clr-violet-light);
 }
 
 /**
@@ -236,6 +267,7 @@ h4 {
 	transform: scale(1.75);
 	margin-right: 1rem;
 }
+
 .todoContent-name {
 	font-size: 2rem;
 	margin: 0.75rem 0px;
@@ -362,7 +394,7 @@ h4 {
 	align-self: flex-end;
 	margin-right: 1rem;
 	display: flex;
-	width: 12rem;
+	width: 19rem;
 	height: 4rem;
 	justify-content: space-between;
 }
@@ -371,18 +403,18 @@ h4 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 4rem;
-	border-radius: 1rem;
+	width: 9rem;
+	border-radius: 3px;
 	outline: none;
 	border: none;
+	font-size: 2rem;
+	color: var(--clr-bkgd-light);
 }
 .bttn-cancelProject {
 	background-color: var(--clr-bkgd-light);
+	color: var(--clr-text);
 }
-.icon-cancelProject {
-	clip-path: margin-box;
-	border-radius: 3px;
-}
+
 .bttn-addProject {
 	background-color: var(--clr-violet);
 }
@@ -541,24 +573,33 @@ h4 {
 }
 
 .addTodo-icons-container {
-	width: 13rem;
 	align-self: flex-end;
 	margin-right: 1rem;
 	display: flex;
+	width: 19rem;
+	height: 4rem;
 	justify-content: space-between;
+	margin-bottom: 2rem;
+}
+.bttn-cancelTodo,
+.bttn-addTodo {
+	display: flex;
+	justify-content: center;
 	align-items: center;
-	margin-bottom: 1rem;
+	width: 9rem;
+	border-radius: 3px;
+	outline: none;
+	border: none;
+	font-size: 2rem;
+	color: var(--clr-bkgd-light);
+}
+
+.bttn-addTodo {
+	background-color: var(--clr-violet);
 }
 .bttn-cancelTodo {
+	color: var(--clr-text);
 	background-color: var(--clr-bkgd-light);
-	outline: none;
-	border: none;
-}
-.bttn-addTodo {
-	border: none;
-	outline: none;
-	background-color: var(--clr-violet);
-	border-radius: 3px;
 }
 .bttn-cancelTodo:hover,
 .bttn-addTodo:hover {
